--- a/scss/dark.css
+++ b/scss/dark.css
@@ -1,29 +1,3 @@
-@charset "UTF-8";
-/*!
-
-Style   : CoinDash CSS
-Version : 1.0
-Author  : Surjith S M
-URI     : http://themeforest.net/user/surjithctly
-
-Copyright © All rights Reserved
-Surjith S M / @surjithctly
-
-
-TABLE OF CONTENTS
-------------------------------
-
-    • Bootstrap CSS
-    • Template CSS
-        • Global Styles
-        • Navigation
-        • Footer
-        
----------------------------------------------------
-Note:  If possible, Please edit the SASS Files and
-        use a compiling tool to generate this css.
----------------------------------------------------
-*/
 html {
   scroll-behavior: smooth;
 }
@@ -114,6 +88,156 @@ html {
 
 #iphonephp {
   width: 250px;
+}
+
+.sidebar {
+  margin: 0;
+  padding: 0;
+  width: 20%;
+  background-color: #24573500;
+  position: fixed;
+  height: 100%;
+  overflow: auto;
+  text-align: center;
+  overflow: scroll;
+}
+
+.sidebar a {
+  display: block;
+  color: black;
+  padding: 16px;
+  text-decoration: none;
+  color: white;
+}
+
+.sidebar a:hover {
+  background-color: #08b442;
+  color: white;
+}
+
+/* width */
+::-webkit-scrollbar {
+  width: 10px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  background: #f1f1f1;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #888;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #555;
+}
+
+.content {
+  margin-left: 20%;
+  padding: 1px 100px;
+  height: 1000px;
+}
+
+@media screen and (max-width: 1000px) {
+  .sidebar {
+    display: none;
+  }
+  .content {
+    margin-left: 0%;
+  }
+}
+
+@media screen and (max-width: 400px) {
+  .sidebar {
+    display: none;
+  }
+  .content {
+    margin-left: 0%;
+  }
+}
+
+.centertitlebgt {
+  text-align: center;
+  margin-top: 20px;
+  font-weight: 900;
+}
+
+.centertitle {
+  text-align: center;
+  margin-top: 40px;
+  font-weight: 600;
+  font-size: 26px;
+}
+
+.centertitleleft {
+  text-align: start;
+  margin-top: 40px;
+  font-weight: 600;
+  font-size: 26px;
+}
+
+.centertitleleft {
+  text-align: start;
+  margin-top: 40px;
+  font-weight: 600;
+  font-size: 26px;
+}
+
+.centertitlelow {
+  text-align: center;
+  font-weight: 600;
+  font-size: 22px;
+}
+
+.centertitlelowlow {
+  text-align: center;
+  font-weight: 600;
+  font-size: 18px;
+}
+
+.centertitlelowlowleft {
+  text-align: start;
+  font-weight: 600;
+  font-size: 18px;
+}
+
+.centertxt {
+  text-align: center;
+}
+
+.logowidth {
+  width: 128px;
+  margin-top: 50px;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  padding: 5px;
+  border: 2px solid wheat;
+  border-radius: 50%;
+}
+
+.imgrecycle {
+  width: 300px;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.contractaddress {
+  margin-top: 50px;
+  margin-bottom: 50px;
+  text-align: center;
+}
+
+.textpara {
+  text-align: justify;
+}
+
+.textparacenter {
+  text-align: center;
 }
 
 /*!
